tests/ui/traits/const-traits/const-closure-parse-not-item.stderr
error[E0277]: the trait bound `test::{returned closure}: [const] Fn()` is not satisfied
  --> $DIR/const-closure-parse-not-item.rs:7:20
   |
LL | const fn test() -> impl [const] Fn() {
   |                    ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
